--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "@neondatabase/serverless": "^0.10.4",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "pg": "^8.13.1"
